fixed scorll jumping height while new image loading.

--- a/app/assets/styles/modules/components/_news.css
+++ b/app/assets/styles/modules/components/_news.css
@@ -7,12 +7,15 @@
       margin-bottom: 1em;
     }
   }
-  &__image {
-    width: 100%;
+  &__image-wrapper {
     height: 160px;
     @mixin atMedium {
       height: 200px;
     }
+  }
+  &__image {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center center;
   } 
